style.css
/*--------------------------
Variables + pseudo selectors
--------------------------*/

:root {
  --font-text: "Inter var", system-ui, sans-serif;
  --font-display: "InterDisplay", "Inter Display", "Inter", system-ui, sans-serif;
  --color-scheme: light;
  --color-accent: oklch(0.44 0.18 144.8);
  --color-text: oklch(0.33 0.14 144.1);
  --color-background: #e8f5e9;
  --color-circle: oklch(0.43 0.12 144.3);
}

.dark-mode {
  --color-scheme: dark;
  --color-accent: oklch(0.9 0.14 145);
  --color-text: white;
  --color-background: #131313;
  --color-circle: oklch(0.8 0.14 145);
}

::selection {
  background-color: #131313;
  color: var(--color-background);
}

:focus-visible {
  outline: 4px solid coral;
}

/*-----Reset------
----------------*/

* {
  margin: 0;
  padding: 0;
}

button {
  background: none;
  border: none;
  touch-action: manipulation;
}

/*----Main styles----
-------------------*/

html {
  -webkit-text-size-adjust: 100%;
  color-scheme: var(--color-scheme);
}

body {
  -webkit-font-smoothing: antialiased;
  font-family: var(--font-text);
  line-height: 1.5;
  background: var(--color-background);
  color: var(--color-text);
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

main, footer, header {
  padding: 15vh 60px 0;
}

footer, header {
  padding-top: 0;
}

dt,
footer,
.name {
  opacity: 0.7;
}

h1 {
  font-size: 25px;
  font-weight: 500;
  line-height: 1.2;
}

header {
  align-items: center;
  display: flex;
  column-gap: calc(5px + 2vmin);
}

.circle {
  aspect-ratio: 1;
  background-color: var(--color-text);
  border-radius: 50%;
  cursor: pointer;
  width: 9vmin;
  min-width: 46px;
  transition: 0.1s;
}

.circle:hover {
  transform: scale(1.1);
}

.dark-mode .circle {
  background-color: oklch(0.8 0.14 145);
}

.name {
  font-size: 20px;
  font-weight: 550;
}

.dark-mode .name {
  font-weight: 450;
}

.location {
  font-size: 16px;
  letter-spacing: 0.25px;
  position: fixed;
  cursor: vertical-text;
  transform: rotate(90deg);
  right: -70px;
  top: 104px;
  width: 200px;
}

dl {
  margin-bottom: calc(6vmin + 2vh);
}

dl dt {
  font-size: 22px;
  font-weight: 600;
  font-variant: all-small-caps;
  letter-spacing: 3px;
  margin-bottom: 3vmin;
}

.dark-mode dl dt {
  font-weight: 500;
}

dl dd {
  font-size: min(max(32px, 2em + 0.2vw - 0.7px), 40px);
  margin-bottom: max(min(8px), 0.2vh, 12px);
  line-height: 1.2;
}

dt:first-child {
  font-size: 20px;
}

a {
  color: inherit;
  text-decoration: none;
}

a {
  font-family: var(--font-display);
}

a:hover {
  color: var(--color-accent);
}

.columns-4 {
  animation: fadein 1.3s;
}

br {
  user-select: none;
}

/*-------Media queries------
----------------------------*/

@media screen and (max-width: 1000px) {
  main,
  header,
  footer {
    padding: 5vw;
  }

  dt {
    width: 100%;
  }

  dl dt,
  dl dd {
    min-width: 200px;
    line-height: 1;
    font-size: 30px;
  }

  dl {
    margin-bottom: 6vmin;
  }

  dd {
    margin: 2vmin 0;
  }

  a {
    display: block;
  }
}

@media screen and (min-width: 1001px) {
  .columns-4 {
    column-gap: 8ch;
    display: flex;
    max-width: 1200px;
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  * {
    transition: 0.05s !important;
  }

  *:hover {
    transform: none !important;
  }
}

